Fix trade table headers overlapping tooltips

--- a/css/general.css
+++ b/css/general.css
@@ -275,7 +275,7 @@ tr:nth-child(even) input {
   padding: 5px 5px;
   /* Position the tooltip */
   position: absolute;
-  z-index: 1;
+  z-index: 100;
 }
 .tooltiptext::after {
   content: " ";
